edit dem khuya(9-11)

--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Swing/Menu/ConNguoi.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Swing/Menu/ConNguoi.form
@@ -47,6 +47,9 @@
               <Color blue="66" green="ff" red="ff" type="rgb"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanel3MouseClicked"/>
+          </Events>
 
           <Layout>
             <DimensionLayout dim="0">
