--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/NhanVienComponent/NhanVienGUI.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/NhanVienComponent/NhanVienGUI.form
@@ -721,6 +721,7 @@
                 </Property>
               </Properties>
               <Events>
+                <EventHandler event="ancestorAdded" listener="javax.swing.event.AncestorListener" parameters="javax.swing.event.AncestorEvent" handler="jLALLAncestorAdded"/>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLALLMouseClicked"/>
               </Events>
             </Component>
